src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Mobile home</fullName>
                </value>
                <value>
                    <fullName>No preference</fullName>
                </value>
                <value>
                    <fullName>Townhome</fullName>
                </value>
                <value>
                    <fullName>Travel Trailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_For_Declining_Housing_Conversion__c</fullName>
        <label>Reason for Declining Housing Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADA/Disability</fullName>
                </value>
                <value>
                    <fullName>ALE Limits</fullName>
                </value>
                <value>
                    <fullName>Attorney/PA Declined</fullName>
                </value>
                <value>
                    <fullName>Elderly/Health Concerns</fullName>
                </value>
                <value>
                    <fullName>File is Being Transferred</fullName>
                </value>
                <value>
                    <fullName>Flexibility of Term</fullName>
                </value>
                <value>
                    <fullName>Hotel is More Cost Effective</fullName>
                </value>
                <value>
                    <fullName>Permanent Relocation</fullName>
                </value>
                <value>
                    <fullName>Pet Restrictions</fullName>
                </value>
                <value>
                    <fullName>Policyholder Preference</fullName>
                </value>
                <value>
                    <fullName>Repairs won’t exceed 30 days</fullName>
                </value>
                <value>
                    <fullName>Rural Area</fullName>
                </value>
                <value>
                    <fullName>Under Investigation</fullName>
                </value>
                <value>
                    <fullName>Utilities/Deposits Concerns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Manager_Assigned__c</fullName>
        <label>Relationship Manager Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reports_TeamNumber__c</fullName>
        <description>This Field contains the Team number calculated from the state that it&apos;s assigned too</description>
        <formula>IF(AND ( (LEN(Adjuster__c) &lt;&gt; 0), CONTAINS(&quot;Chartis Insurance:Chubb Insurance:PURE:Ace Private Risk Services:Lexington Insurance Company:Nationwide Private Client:AIG Insurance:Fireman&apos;s Fund Insurance Co.&quot;, Adjuster__r.Account.Name)), 8, 
IF(LEN(Text(Damaged_Property_State__c))=0, 0, 
IF(CONTAINS(&quot;CA&quot;, Text(Damaged_Property_State__c)), 1, 
IF(CONTAINS(&quot;AK:HI:ON:QC:NS:NB:PE:NL:AB:BC:MB:SK:AZ:CO:NM:NV:OR:UT:ID:WA&quot;, Text(Damaged_Property_State__c)), 2, 
IF(CONTAINS(&quot;ND:SD:NE:KS:OK:TX:MO:IA:MN:TN:MT:WY&quot;, Text(Damaged_Property_State__c)), 3, 
IF(CONTAINS(&quot;WI:IL:IN:OH:NY&quot;, Text(Damaged_Property_State__c)), 4, 
IF(CONTAINS(&quot;MI:KY:WV:DC:MD:DE:VA&quot;, Text(Damaged_Property_State__c)), 5, 
IF(CONTAINS(&quot;AR:LA:MS:AL:GA:FL:SC:NC&quot;, Text(Damaged_Property_State__c)), 6, 
IF(CONTAINS(&quot;CT:MA:ME:NH:NJ:PA:RI:VT&quot;, Text(Damaged_Property_State__c)), 7,7)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Team Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Deposit_To__c</fullName>
        <description>Entered on Claim and pushed to SR</description>
        <label>Return Deposit To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <formula>IF(LEN(Adjuster__c)=0, 0,
IF(LEN(Adjuster__r.OtherState)=0, 0,
IF(CONTAINS(&quot;AK:HI:CA:AZ:NV:OR:WA:ID:MT:WY:UT:CO:NM&quot;, Adjuster__r.OtherState), 10, 
IF(CONTAINS(&quot;TX:OK:KS:MO:NE:SD:ND:MN:IA:WI:IL:MI:OH:IN&quot;, Adjuster__r.OtherState), 20, 
IF(CONTAINS(&quot;AR:LA:MS:AL:GA:SC:NC:KY:TN:FL&quot;, Adjuster__r.OtherState), 30, 
IF(CONTAINS(&quot;VA:WV:PA:NY:DC:MD:DE:NJ:CT:RI:MA:NH:VT:ME&quot;,Adjuster__r.OtherState), 40, 
IF(CONTAINS(&quot;NU:MB:ON:QC:NL:YT:NT:BC:AB:SK&quot;, Adjuster__r.OtherState), 50,0)))))))</formula>
        <label>Sales Territory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_Test__c</fullName>
        <formula>VALUE(LEFT(Damaged_Property_Zip__c,5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_District__c</fullName>
        <label>School District</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smoking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smoking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spanish_Speaking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used to identify if family is only Spanish speaking.</description>
        <inlineHelpText>If checked the family is only Spanish speaking</inlineHelpText>
        <label>Spanish Speaking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <description>Used for the housing teams to note special circumstances regarding this Opportunity.</description>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Loss__c</fullName>
        <label>Type of Loss</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAT</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Mold</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Tornado</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicles__c</fullName>
        <label>Vehicles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Char_ID_PH__c</fullName>
        <description>Created to convert the 15 character id to 18 characters.</description>
        <label>X18_Char_ID_PH</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Char_ID__c</fullName>
        <description>Created to convert the 15 character id to 18 characters.</description>
        <label>X18_Char_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Home_Was_Built__c</fullName>
        <label>Year Home Was Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Housing_Claims</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Initial_Service_Request__c</field>
            <operation>equals</operation>
            <value>Housing</value>
        </filters>
        <label>Housing Claims</label>
    </listViews>
    <listViews>
        <fullName>My_Policyholder_Claims</fullName>
        <columns>Policyholder__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Initial_Service_Request__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Type_of_Loss__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012700000001W2e,Opportunity.Claim</value>
        </filters>
        <label>My Policyholder Claims</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>Reports_TeamNumber__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Damaged_Property_City__c</columns>
        <columns>Damaged_Property_State__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Claim</fullName>
        <active>true</active>
        <businessProcess>Standard Request</businessProcess>
        <label>Claim</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ALE_Amount_Limit</fullName>
        <active>true</active>
        <description>ALE Amount Limit cannot be a negative amount</description>
        <errorConditionFormula>ALE_Limit_Amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>ALE_Limit_Amount__c</errorDisplayField>
        <errorMessage>You cannot enter a negative amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ALE_Time_Limit</fullName>
        <active>true</active>
        <description>ALE Time Limit cannot be a negative months</description>
        <errorConditionFormula>ALE_Limit_Time__c &lt; 0</errorConditionFormula>
        <errorDisplayField>ALE_Limit_Time__c</errorDisplayField>
        <errorMessage>You cannot enter a negative time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DamagedProperty_PostalCode_Canada</fullName>
        <active>true</active>
        <description>Makes sure the postal code is in the correct format</description>
        <errorConditionFormula>AND(Text(Damaged_Property_Country__c) = &quot;CAN&quot;,NOT(LEN(Damaged_Property_Zip__c)=0),
NOT(REGEX(Damaged_Property_Zip__c,
&quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;)))</errorConditionFormula>
        <errorDisplayField>Damaged_Property_Zip__c</errorDisplayField>
        <errorMessage>must be in A9A 9A9 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DamagedProperty_ZipCode_USA</fullName>
        <active>true</active>
        <description>Makes sure the zip code is in the correct format</description>
        <errorConditionFormula>AND(Text(Damaged_Property_Country__c) = &quot;USA&quot;,NOT(LEN(Damaged_Property_Zip__c)=0),
NOT(REGEX( Damaged_Property_Zip__c , &quot;\\d{5}(-\\d{4})?&quot;)))</errorConditionFormula>
        <errorDisplayField>Damaged_Property_Zip__c</errorDisplayField>
        <errorMessage>must be in 99999 or 99999-9999 format.</errorMessage>
    </validationRules>
</CustomObject>